# forensics

./: .gitignore  README.md  TODO.md  blotch_blur_filter.py  eval_subject_quality.py  evaluate_labels.py  evaluate_manual_scores.py  image_quality_metrics.py  notes.md  pyproject.toml  run_manual_eval.py  test_bg.py  test_noise.py  test_pca.py  test_texture.py  test_texture_old.py  texture_clean_core.py  texture_clean_scorer.py  texture_clean_visual.py  visualize_metric_maps.py  visualize_metrics.py
misc/: autocorr_check.py  band_check.py  clumpiness_check.py  debug_masked_stats.py  debug_stats.py  deep_investigation.py  dist_check.py  hessian_check.py  quick_check.py
misc/legacy/: blotch_blur_filter_copy.py  blotch_blur_filter_copy2.py
tools/: __init__.py  evaluate_labels.py  evaluate_manual_scores.py  run_manual_eval.py  visualize_metric_maps.py  visualize_metrics.py
